# linkforge

./: .all-contributorsrc  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Justfile  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  THIRD_PARTY_LICENSES.md  VISION.md  blender_launcher.py  blender_manifest.toml  build_extension.py  clean.sh  pyproject.toml  release-please-config.json  run_blender_tests.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: blender_tests.yml  ci.yml  release-please.yml
core/: README.md  pyproject.toml
core/src/linkforge/core/: __init__.py  base.py  constants.py  exceptions.py  io.py
core/src/linkforge/core/_utils/: dict_utils.py  math_utils.py  path_utils.py  xml_utils.py
core/src/linkforge/core/composer/: __init__.py  helpers.py  interfaces.py  link_builder.py  robot_builder.py  semantic_builder.py
core/src/linkforge/core/generators/: __init__.py  srdf_generator.py  urdf_generator.py  xacro_generator.py  xml_base.py
core/src/linkforge/core/models/: __init__.py  gazebo.py  geometry.py  graph.py  joint.py  link.py  material.py  robot.py  ros2_control.py  sensor.py  srdf.py  transmission.py
core/src/linkforge/core/parsers/: __init__.py  srdf_parser.py  urdf_parser.py  xacro_parser.py  xml_base.py
core/src/linkforge/core/physics/: __init__.py  inertia.py  mesh_validation.py
core/src/linkforge/core/validation/: __init__.py  checks.py  result.py  security.py  validator.py
core/src/linkforge_core/: __init__.py  base.py  constants.py  exceptions.py  urdf_generator.py  xacro_generator.py
core/src/linkforge_core/composer/: __init__.py  link_builder.py  naming.py  robot_assembly.py  robot_builder.py  semantic_builder.py
core/src/linkforge_core/generators/: srdf_generator.py  urdf_generator.py  xacro_generator.py  xml_base.py
core/src/linkforge_core/models/: __init__.py  gazebo.py  geometry.py  graph.py  joint.py  link.py  material.py  robot.py  ros2_control.py  sensor.py  srdf.py  transmission.py
core/src/linkforge_core/parsers/: __init__.py  srdf_parser.py  urdf_parser.py  xacro_parser.py  xml_base.py
core/src/linkforge_core/physics/: inertia.py  mesh_validation.py
core/src/linkforge_core/utils/: dependencies.py  kinematics.py  math_utils.py  path_utils.py  string_utils.py  xml_utils.py
core/src/linkforge_core/validation/: __init__.py  checks.py  security.py  validator.py
docs/: README.md
docs/decisions/: ADR-000-template.md  ADR-001-monorepo-structure.md  ADR-002-centralized-api-and-src-layout.md
docs/explanation/: LLVM_COMPARISON.md  PHYSICS_AS_TRUTH.md
docs/source/: citation.md  conf.py  index.md
docs/specification/: LF_STANDARD.md
docs/testing/: manual_qa.md
examples/: README.md  diff_drive_robot.urdf
examples/xacro/: diff_drive_robot.xacro  materials.xacro
linkforge/: __init__.py
linkforge/blender/: __init__.py  handlers.py  preferences.py  urdf_importer.py
linkforge/core/: xacro_generator.py
scripts/: blender_launcher.py
skills/assemble/: README.md  SKILL.md
tests/: README.md  blender_test_runner.py  blender_test_utils.py  conftest.py  core_test_utils.py  mock_bpy_env.py
tests/integration/: test_advanced_urdf_roundtrip.py  test_comprehensive_roundtrip.py  (+13 more)
wheels/: pyyaml-6.0.3-cp311-cp311-macosx_10_13_x86_64.whl
(+157 files in other folders)
