[project]
name = "linkforge-workspace"
version = "1.3.0" # x-release-please-version
description = "LinkForge: The LLVM for Robotics and Universal Intermediate Representation (IR)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["core", "platforms/blender"]

[tool.uv.sources]
linkforge-core = { workspace = true }
linkforge-blender = { workspace = true }


# Shared Tool Configs
[tool.pytest.ini_options]
testpaths = ["tests/unit/core", "tests/unit/platforms/blender"]
pythonpath = ["core/src", "platforms/blender/src"]
addopts = ["--verbose", "--cov=linkforge.core", "--cov=linkforge.blender"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG", "ERA", "TRY003"]
ignore = ["E501", "B008", "C901", "B009", "N801"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["ARG", "ERA", "TRY003", "F841"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = ["core/src", "platforms/blender/src"]

[tool.pyright]
include = ["core/src", "platforms/blender/src", "tests"]
exclude = ["**/mock_bpy_env.py", "platforms/blender/src/linkforge/blender/linkforge"]
ignore = ["**/mock_bpy_env.py", "platforms/blender/src/linkforge/blender/linkforge"]
extraPaths = ["core/src", "platforms/blender/src"]
typeCheckingMode = "basic"
pythonVersion = "3.13"

executionEnvironments = [
  { root = "platforms/blender", reportAttributeAccessIssue = "none", reportInvalidTypeForm = "none", reportReturnType = "none" },
  { root = "tests", reportArgumentType = "none", reportAttributeAccessIssue = "none", reportOptionalMemberAccess = "none", reportMissingImports = "none" }
]


# Blender (bpy) stubs use Python 3.12 syntax.
[[tool.mypy.overrides]]
module = [
    "bpy",
    "bpy.*",
    "mathutils",
    "mathutils.*",
    "gpu",
    "gpu.*",
    "gpu_extras",
    "gpu_extras.*",
    "bpy_extras",
    "bpy_extras.*",
]
ignore_errors = true
ignore_missing_imports = true
# Enable full type checking for all LinkForge Blender modules
[[tool.mypy.overrides]]
module = "linkforge.blender.*"
ignore_errors = false
disallow_subclassing_any = false
warn_unused_ignores = true

[dependency-groups]
dev = [
    "linkforge-core",
    "linkforge-blender",
    "types-PyYAML",
    "pytest>=9.0.3",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.15.13",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "myst-parser>=2.0.0",
    "sphinx>=7.2.6",
    "sphinx-autodoc-typehints>=2.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinxcontrib-mermaid>=0.9.2",
    "sphinx-design>=0.5.0",
    "fake-bpy-module-4.2",
    "pyright>=1.1.409",
]
